--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "author": "kim chang min",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
