#3.1 MongoDB and Mongoose

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "mongoose": "^5.9.3",
     "morgan": "^1.9.1",
     "pug": "^2.0.4"
   },
